# ros2_jitter_test

./: jitter.txt  run.md  run_driver.sh
md/: 01_monitor_cpu14_interupt_realtime.md  02_smp_affinity.md  03_stop_irqbalance.md  Discovery_Server.mmd  data.md  result_eva.md  rt_perf_optimization.mmd  run.md  test.mmd  topic_discovery_failure.mmd
run/: check_cpu_env.sh  jitter.txt  plot_jitter.py
run/data/: jitter.txt  jitter_with_IP43_no_rt_from_IP412.txt  jitter_with_IP43_no_taskset_from_local_no_taskset.txt  jitter_with_IP43_taskset_from_IP412.txt  jitter_with_IP43_taskset_from_local_taskset.txt  jitter_with_launch_no_taskset.txt  jitter_with_launch_taskset.txt  jitter_with_no_taskset.txt  jitter_with_taskset_24.txt  jitter_with_taskset_24_and_25.txt  jitter_with_taskset_25.txt  jitter_with_taskset_both.txt  output00.txt
run/plot/: plot_jitter.py  plot_latency.py
run/sh/: run_driver.sh  run_realtime_test.sh
run/test_python/: jitter_analyzer_10s.py  jitter_analyzer_10s_fifo.py  jitter_analyzer_10s_normal.py  jitter_analyzer_10s_qos.py  jitter_analyzer_10s_save.py  mock_robot_driver.py  mock_robot_driver_fifo.py  test.ipynb
src/dds_router/: ddsrouter.repos
src/jitter_analysis/: CMakeLists.txt  package.xml
src/jitter_analysis/config/: client.yaml  cyclonedds_config.xml  cyclonedds_config2.xml  fastdds_server.xml  server.yaml
src/jitter_analysis/launch/: load_component.launch.py  send_and_receive.launch.py
src/jitter_analysis/src/: jitter_analyzer_10s.cpp  jitter_analyzer_10s_comp.cpp  mock_robot_driver.cpp  mock_robot_driver_comp.cpp
